changed video to image code

--- a/video_to_image.ipynb
+++ b/video_to_image.ipynb
@@ -2,17 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing all necessary libraries\n",
     "import cv2\n",
-    "import os\n",
-    "  \n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type_ = 'Break' #Ingame or Break\n",
+    "training_validation = 'Validation'\n",
+    "\n",
     "# Read the video from specified path\n",
-    "filename = 'Ingame_Validation.mp4'\n",
-    "cam = cv2.VideoCapture(\"./data/ingame/validation/\" + filename)\n",
+    "\n",
+    "path = \"./data/\" + type_.lower()\n",
+    "\n",
+    "if training_validation != \"train\":\n",
+    "    path += \"/\" + training_validation.lower()\n",
+    "    filename = type_.capitalize() + \"_\" + training_validation.capitalize() + '.mp4'\n",
+    "else:\n",
+    "    filename = type_.capitalize() + '.mp4'\n",
+    "\n",
+    "\n",
+    "cam = cv2.VideoCapture(path + \"/\" + filename)\n",
     "  \n",
     "# frame\n",
     "currentframe = 0\n",
@@ -24,11 +43,20 @@
     "  \n",
     "    if ret:\n",
     "        # if video is still left continue creating images\n",
-    "        name = './data/validation_data/0/' + filename.replace('.mp4', '') + '_' + str(currentframe) + '.jpg'\n",
-    "  \n",
+    "        if type_.lower() == \"ingame\":\n",
+    "            class_string = \"0\"\n",
+    "        else:\n",
+    "            class_string = \"1\"\n",
+    "        if training_validation.lower() == \"train\":\n",
+    "            target_folder = \"train_data\"\n",
+    "        else:\n",
+    "            target_folder = \"validation_data\"\n",
+    "            \n",
+    "        name = './data/'+target_folder+'/'+class_string+'/' + filename.replace('.mp4', '') + '_' + str(currentframe) + '.jpg'\n",
+    "        \n",
     "        # writing the extracted images\n",
     "        cv2.imwrite(name, frame)\n",
-    "  \n",
+    "        \n",
     "        currentframe += 1\n",
     "    else:\n",
     "        break\n",
