updated model structure and mlflow code

--- a/video_to_image.ipynb
+++ b/video_to_image.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "type_ = 'Break' #Ingame or Break\n",
-    "training_validation = 'Validation'\n",
+    "training_validation = 'validation' #train or validation\n",
     "\n",
     "# Read the video from specified path\n",
     "\n",
@@ -40,6 +40,7 @@
     "      \n",
     "    # reading from frame\n",
     "    ret,frame = cam.read()\n",
+    "\n",
     "  \n",
     "    if ret:\n",
     "        # if video is still left continue creating images\n",
@@ -53,9 +54,9 @@
     "            target_folder = \"validation_data\"\n",
     "            \n",
     "        name = './data/'+target_folder+'/'+class_string+'/' + filename.replace('.mp4', '') + '_' + str(currentframe) + '.jpg'\n",
-    "        \n",
+    "        frame_gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "        # writing the extracted images\n",
-    "        cv2.imwrite(name, frame)\n",
+    "        cv2.imwrite(name, frame_gray)\n",
     "        \n",
     "        currentframe += 1\n",
     "    else:\n",
