--- a/inference.ipynb
+++ b/inference.ipynb
@@ -18,6 +18,232 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metal device set to: Apple M1\n",
+      "\n",
+      "systemMemory: 16.00 GB\n",
+      "maxCacheSize: 5.33 GB\n",
+      "\n",
+      "<keras.engine.input_layer.InputLayer object at 0x109bd8af0>\n",
+      "<keras.layers.preprocessing.normalization.Normalization object at 0x2aaefd780>\n",
+      "<keras.engine.sequential.Sequential object at 0x2aaeff400>\n",
+      "<keras.layers.convolutional.conv2d.Conv2D object at 0x2ab26df90>\n",
+      "<keras.layers.normalization.layer_normalization.LayerNormalization object at 0x2ab26ffa0>\n",
+      "<keras.layers.core.dense.Dense object at 0x2b0c42140>\n",
+      "<keras.layers.core.activation.Activation object at 0x2b0c43670>\n",
+      "<keras.layers.core.dense.Dense object at 0x2b0c420e0>\n",
+      "<keras.applications.convnext.LayerScale object at 0x2b0c416f0>\n",
+      "<keras.layers.core.activation.Activation object at 0x2b0c415d0>\n",
+      "<keras.layers.core.tf_op_layer.TFOpLambda object at 0x2ab26f520>\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Missing required positional argument",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msrc\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodel\u001b[39;00m \u001b[39mimport\u001b[39;00m create_convnext_model\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtf\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m convnext_model \u001b[39m=\u001b[39m create_convnext_model((\u001b[39m1\u001b[39;49m,\u001b[39m1\u001b[39;49m))\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(convnext_model\u001b[39m.\u001b[39msummary())\n\u001b[1;32m      5\u001b[0m convnext_model\u001b[39m.\u001b[39mcompile(\n\u001b[1;32m      6\u001b[0m         loss\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mbinary_crossentropy\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m      7\u001b[0m         optimizer\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39madam\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m      8\u001b[0m         metrics\u001b[39m=\u001b[39m[\u001b[39m\"\u001b[39m\u001b[39maccuracy\u001b[39m\u001b[39m\"\u001b[39m, tf\u001b[39m.\u001b[39mkeras\u001b[39m.\u001b[39mmetrics\u001b[39m.\u001b[39mPrecision(), tf\u001b[39m.\u001b[39mkeras\u001b[39m.\u001b[39mmetrics\u001b[39m.\u001b[39mRecall()],\n\u001b[1;32m      9\u001b[0m         steps_per_execution\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m,\n\u001b[1;32m     10\u001b[0m     )\n",
+      "File \u001b[0;32m~/Projects/Hauptseminar/extra-time-calculation/src/model.py:47\u001b[0m, in \u001b[0;36mcreate_convnext_model\u001b[0;34m(input_shape)\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[39mfor\u001b[39;00m layer \u001b[39min\u001b[39;00m prebuilt_model\u001b[39m.\u001b[39mlayers[:\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]:  \u001b[39m# this is where I changed your code\u001b[39;00m\n\u001b[1;32m     46\u001b[0m     \u001b[39mprint\u001b[39m(layer)\n\u001b[0;32m---> 47\u001b[0m     model\u001b[39m.\u001b[39;49madd(layer)\n\u001b[1;32m     48\u001b[0m model\u001b[39m.\u001b[39madd(layers\u001b[39m.\u001b[39mDense(\u001b[39m1\u001b[39m, activation\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39msigmoid\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[1;32m     50\u001b[0m model\u001b[39m.\u001b[39mcompile(\n\u001b[1;32m     51\u001b[0m     loss\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mbinary_crossentropy\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     52\u001b[0m     optimizer\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39madam\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     53\u001b[0m     metrics\u001b[39m=\u001b[39m[\u001b[39m\"\u001b[39m\u001b[39maccuracy\u001b[39m\u001b[39m\"\u001b[39m, tf\u001b[39m.\u001b[39mkeras\u001b[39m.\u001b[39mmetrics\u001b[39m.\u001b[39mPrecision(), tf\u001b[39m.\u001b[39mkeras\u001b[39m.\u001b[39mmetrics\u001b[39m.\u001b[39mRecall()],\n\u001b[1;32m     54\u001b[0m     steps_per_execution\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m,\n\u001b[1;32m     55\u001b[0m )\n",
+      "File \u001b[0;32m~/Projects/Hauptseminar/extra-time-calculation/hauptseminar_310/lib/python3.10/site-packages/tensorflow/python/trackable/base.py:205\u001b[0m, in \u001b[0;36mno_automatic_dependency_tracking.<locals>._method_wrapper\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    203\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_self_setattr_tracking \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m  \u001b[39m# pylint: disable=protected-access\u001b[39;00m\n\u001b[1;32m    204\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 205\u001b[0m   result \u001b[39m=\u001b[39m method(\u001b[39mself\u001b[39;49m, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    206\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[1;32m    207\u001b[0m   \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_self_setattr_tracking \u001b[39m=\u001b[39m previous_value  \u001b[39m# pylint: disable=protected-access\u001b[39;00m\n",
+      "File \u001b[0;32m~/Projects/Hauptseminar/extra-time-calculation/hauptseminar_310/lib/python3.10/site-packages/keras/utils/traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     67\u001b[0m     filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[1;32m     68\u001b[0m     \u001b[39m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[39m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[1;32m     71\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[1;32m     72\u001b[0m     \u001b[39mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[0;32m~/Projects/Hauptseminar/extra-time-calculation/hauptseminar_310/lib/python3.10/site-packages/tensorflow/python/util/dispatch.py:1170\u001b[0m, in \u001b[0;36madd_dispatch_support.<locals>.decorator.<locals>.op_dispatch_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m   1168\u001b[0m \u001b[39mif\u001b[39;00m iterable_params \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   1169\u001b[0m   args, kwargs \u001b[39m=\u001b[39m replace_iterable_params(args, kwargs, iterable_params)\n\u001b[0;32m-> 1170\u001b[0m result \u001b[39m=\u001b[39m api_dispatcher\u001b[39m.\u001b[39;49mDispatch(args, kwargs)\n\u001b[1;32m   1171\u001b[0m \u001b[39mif\u001b[39;00m result \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNotImplemented\u001b[39m:\n\u001b[1;32m   1172\u001b[0m   \u001b[39mreturn\u001b[39;00m result\n",
+      "\u001b[0;31mTypeError\u001b[0m: Missing required positional argument"
+     ]
+    }
+   ],
+   "source": [
+    "from src.model import create_convnext_model\n",
+    "import tensorflow as tf\n",
+    "convnext_model = create_convnext_model((1,1))\n",
+    "print(convnext_model.summary())\n",
+    "convnext_model.compile(\n",
+    "        loss=\"binary_crossentropy\",\n",
+    "        optimizer=\"adam\",\n",
+    "        metrics=[\"accuracy\", tf.keras.metrics.Precision(), tf.keras.metrics.Recall()],\n",
+    "        steps_per_execution=1,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_3 [(None, 224, 224, 3)]\n",
+      "convnext_tiny_prestem_normalization (None, 224, 224, 3)\n",
+      "convnext_tiny_stem (None, 56, 56, 96)\n",
+      "convnext_tiny_stage_0_block_0_depthwise_conv (None, 56, 56, 96)\n",
+      "convnext_tiny_stage_0_block_0_layernorm (None, 56, 56, 96)\n",
+      "convnext_tiny_stage_0_block_0_pointwise_conv_1 (None, 56, 56, 384)\n",
+      "convnext_tiny_stage_0_block_0_gelu (None, 56, 56, 384)\n",
+      "convnext_tiny_stage_0_block_0_pointwise_conv_2 (None, 56, 56, 96)\n",
+      "convnext_tiny_stage_0_block_0_layer_scale (None, 56, 56, 96)\n",
+      "convnext_tiny_stage_0_block_0_identity (None, 56, 56, 96)\n",
+      "tf.__operators__.add_36 (None, 56, 56, 96)\n",
+      "convnext_tiny_stage_0_block_1_depthwise_conv (None, 56, 56, 96)\n",
+      "convnext_tiny_stage_0_block_1_layernorm (None, 56, 56, 96)\n",
+      "convnext_tiny_stage_0_block_1_pointwise_conv_1 (None, 56, 56, 384)\n",
+      "convnext_tiny_stage_0_block_1_gelu (None, 56, 56, 384)\n",
+      "convnext_tiny_stage_0_block_1_pointwise_conv_2 (None, 56, 56, 96)\n",
+      "convnext_tiny_stage_0_block_1_layer_scale (None, 56, 56, 96)\n",
+      "convnext_tiny_stage_0_block_1_identity (None, 56, 56, 96)\n",
+      "tf.__operators__.add_37 (None, 56, 56, 96)\n",
+      "convnext_tiny_stage_0_block_2_depthwise_conv (None, 56, 56, 96)\n",
+      "convnext_tiny_stage_0_block_2_layernorm (None, 56, 56, 96)\n",
+      "convnext_tiny_stage_0_block_2_pointwise_conv_1 (None, 56, 56, 384)\n",
+      "convnext_tiny_stage_0_block_2_gelu (None, 56, 56, 384)\n",
+      "convnext_tiny_stage_0_block_2_pointwise_conv_2 (None, 56, 56, 96)\n",
+      "convnext_tiny_stage_0_block_2_layer_scale (None, 56, 56, 96)\n",
+      "convnext_tiny_stage_0_block_2_identity (None, 56, 56, 96)\n",
+      "tf.__operators__.add_38 (None, 56, 56, 96)\n",
+      "convnext_tiny_downsampling_block_0 (None, 28, 28, 192)\n",
+      "convnext_tiny_stage_1_block_0_depthwise_conv (None, 28, 28, 192)\n",
+      "convnext_tiny_stage_1_block_0_layernorm (None, 28, 28, 192)\n",
+      "convnext_tiny_stage_1_block_0_pointwise_conv_1 (None, 28, 28, 768)\n",
+      "convnext_tiny_stage_1_block_0_gelu (None, 28, 28, 768)\n",
+      "convnext_tiny_stage_1_block_0_pointwise_conv_2 (None, 28, 28, 192)\n",
+      "convnext_tiny_stage_1_block_0_layer_scale (None, 28, 28, 192)\n",
+      "convnext_tiny_stage_1_block_0_identity (None, 28, 28, 192)\n",
+      "tf.__operators__.add_39 (None, 28, 28, 192)\n",
+      "convnext_tiny_stage_1_block_1_depthwise_conv (None, 28, 28, 192)\n",
+      "convnext_tiny_stage_1_block_1_layernorm (None, 28, 28, 192)\n",
+      "convnext_tiny_stage_1_block_1_pointwise_conv_1 (None, 28, 28, 768)\n",
+      "convnext_tiny_stage_1_block_1_gelu (None, 28, 28, 768)\n",
+      "convnext_tiny_stage_1_block_1_pointwise_conv_2 (None, 28, 28, 192)\n",
+      "convnext_tiny_stage_1_block_1_layer_scale (None, 28, 28, 192)\n",
+      "convnext_tiny_stage_1_block_1_identity (None, 28, 28, 192)\n",
+      "tf.__operators__.add_40 (None, 28, 28, 192)\n",
+      "convnext_tiny_stage_1_block_2_depthwise_conv (None, 28, 28, 192)\n",
+      "convnext_tiny_stage_1_block_2_layernorm (None, 28, 28, 192)\n",
+      "convnext_tiny_stage_1_block_2_pointwise_conv_1 (None, 28, 28, 768)\n",
+      "convnext_tiny_stage_1_block_2_gelu (None, 28, 28, 768)\n",
+      "convnext_tiny_stage_1_block_2_pointwise_conv_2 (None, 28, 28, 192)\n",
+      "convnext_tiny_stage_1_block_2_layer_scale (None, 28, 28, 192)\n",
+      "convnext_tiny_stage_1_block_2_identity (None, 28, 28, 192)\n",
+      "tf.__operators__.add_41 (None, 28, 28, 192)\n",
+      "convnext_tiny_downsampling_block_1 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_0_depthwise_conv (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_0_layernorm (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_0_pointwise_conv_1 (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_0_gelu (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_0_pointwise_conv_2 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_0_layer_scale (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_0_identity (None, 14, 14, 384)\n",
+      "tf.__operators__.add_42 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_1_depthwise_conv (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_1_layernorm (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_1_pointwise_conv_1 (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_1_gelu (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_1_pointwise_conv_2 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_1_layer_scale (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_1_identity (None, 14, 14, 384)\n",
+      "tf.__operators__.add_43 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_2_depthwise_conv (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_2_layernorm (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_2_pointwise_conv_1 (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_2_gelu (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_2_pointwise_conv_2 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_2_layer_scale (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_2_identity (None, 14, 14, 384)\n",
+      "tf.__operators__.add_44 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_3_depthwise_conv (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_3_layernorm (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_3_pointwise_conv_1 (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_3_gelu (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_3_pointwise_conv_2 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_3_layer_scale (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_3_identity (None, 14, 14, 384)\n",
+      "tf.__operators__.add_45 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_4_depthwise_conv (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_4_layernorm (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_4_pointwise_conv_1 (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_4_gelu (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_4_pointwise_conv_2 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_4_layer_scale (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_4_identity (None, 14, 14, 384)\n",
+      "tf.__operators__.add_46 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_5_depthwise_conv (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_5_layernorm (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_5_pointwise_conv_1 (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_5_gelu (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_5_pointwise_conv_2 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_5_layer_scale (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_5_identity (None, 14, 14, 384)\n",
+      "tf.__operators__.add_47 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_6_depthwise_conv (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_6_layernorm (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_6_pointwise_conv_1 (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_6_gelu (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_6_pointwise_conv_2 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_6_layer_scale (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_6_identity (None, 14, 14, 384)\n",
+      "tf.__operators__.add_48 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_7_depthwise_conv (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_7_layernorm (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_7_pointwise_conv_1 (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_7_gelu (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_7_pointwise_conv_2 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_7_layer_scale (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_7_identity (None, 14, 14, 384)\n",
+      "tf.__operators__.add_49 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_8_depthwise_conv (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_8_layernorm (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_8_pointwise_conv_1 (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_8_gelu (None, 14, 14, 1536)\n",
+      "convnext_tiny_stage_2_block_8_pointwise_conv_2 (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_8_layer_scale (None, 14, 14, 384)\n",
+      "convnext_tiny_stage_2_block_8_identity (None, 14, 14, 384)\n",
+      "tf.__operators__.add_50 (None, 14, 14, 384)\n",
+      "convnext_tiny_downsampling_block_2 (None, 7, 7, 768)\n",
+      "convnext_tiny_stage_3_block_0_depthwise_conv (None, 7, 7, 768)\n",
+      "convnext_tiny_stage_3_block_0_layernorm (None, 7, 7, 768)\n",
+      "convnext_tiny_stage_3_block_0_pointwise_conv_1 (None, 7, 7, 3072)\n",
+      "convnext_tiny_stage_3_block_0_gelu (None, 7, 7, 3072)\n",
+      "convnext_tiny_stage_3_block_0_pointwise_conv_2 (None, 7, 7, 768)\n",
+      "convnext_tiny_stage_3_block_0_layer_scale (None, 7, 7, 768)\n",
+      "convnext_tiny_stage_3_block_0_identity (None, 7, 7, 768)\n",
+      "tf.__operators__.add_51 (None, 7, 7, 768)\n",
+      "convnext_tiny_stage_3_block_1_depthwise_conv (None, 7, 7, 768)\n",
+      "convnext_tiny_stage_3_block_1_layernorm (None, 7, 7, 768)\n",
+      "convnext_tiny_stage_3_block_1_pointwise_conv_1 (None, 7, 7, 3072)\n",
+      "convnext_tiny_stage_3_block_1_gelu (None, 7, 7, 3072)\n",
+      "convnext_tiny_stage_3_block_1_pointwise_conv_2 (None, 7, 7, 768)\n",
+      "convnext_tiny_stage_3_block_1_layer_scale (None, 7, 7, 768)\n",
+      "convnext_tiny_stage_3_block_1_identity (None, 7, 7, 768)\n",
+      "tf.__operators__.add_52 (None, 7, 7, 768)\n",
+      "convnext_tiny_stage_3_block_2_depthwise_conv (None, 7, 7, 768)\n",
+      "convnext_tiny_stage_3_block_2_layernorm (None, 7, 7, 768)\n",
+      "convnext_tiny_stage_3_block_2_pointwise_conv_1 (None, 7, 7, 3072)\n",
+      "convnext_tiny_stage_3_block_2_gelu (None, 7, 7, 3072)\n",
+      "convnext_tiny_stage_3_block_2_pointwise_conv_2 (None, 7, 7, 768)\n",
+      "convnext_tiny_stage_3_block_2_layer_scale (None, 7, 7, 768)\n",
+      "convnext_tiny_stage_3_block_2_identity (None, 7, 7, 768)\n",
+      "tf.__operators__.add_53 (None, 7, 7, 768)\n",
+      "convnext_tiny_head_gap (None, 768)\n",
+      "convnext_tiny_head_layernorm (None, 768)\n",
+      "convnext_tiny_head_dense (None, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for layer in convnext_model.layers:\n",
+    "    print(layer.name, layer.output_shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
